# cliconfig

./: .gitignore  .markdownlint.json  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  DOCUMENTATION.md  README.md  README_pypi.md  pre-commit-checks.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: flake.yaml  pdoc.yaml  pipy_deployment.yaml  pydocstyle.yaml  pylint.yaml  ruff.yaml  tests.yaml
cliconfig/: __init__.py  _logger.py  base.py  build_config.py  cli_parser.py  config.py  config_routines.py  dict_routines.py  process_routines.py  processings.py  routines.py  save_load.py  show.py  tag_routines.py
cliconfig/processing/: __init__.py  _ast_parser.py  _maths_parser.py  _type_parser.py  allowed_functions.yaml  base.py  builtin.py  create.py
cliconfig/yaml_tags/: _yaml_tags.py
docs/: README_pypi.rst  cliconfig.processing.rst  cliconfig.processing_api.rst  cliconfig_api.rst  conf.py  contribute.md  create_config.md  edge_cases.md  index.rst  installation.md  license.md  manipulate.md  manipulate_configs.md  modules.rst  processing.md  quickstart.md  requirements.txt  sweep.md
docs/api/: base.rst  cli_parser.rst  config_routines.rst  dict_routines.rst  main.rst  process_routines.rst  tag_routines.rst
docs/api/processing/: base.rst  builtin.rst  create.rst  main.rst
docs/template/: README.md  content.css  custom.css  layout.css  module.html.jinja2  theme.css
github_actions_utils/: __init__.py  color.py  pydocstyle_manager.py  pylint_manager.py  pytest_manager.py
licenses_tier/: FLATDICT_LICENSE
scripts/: integration-tests.sh  pre-commit-checks.sh
tests/: __init__.py  conftest.py  test_build_config.py  test_cli_parser.py  test_config.py  test_process_routines.py  test_routines.py  test_save_load.py  test_show.py
tests/configs/: config1.yaml  config2.yaml  configtag1.yaml  configtag2.yaml  default1.yaml  default2.yaml  fallback.yaml  multi_files.yaml  multi_files_with_tags.yaml  wrong.yaml
tests/configs/delete/: config1.yaml  config2.yaml
tests/configs/integration/: main.yaml  sub1.yaml  sub2.yaml  sweep.yaml
tests/configs/integration/test1/: main.yaml  sub1.yaml  sub2.yaml
tests/configs/integration/test2/: data.yaml  exp1.yaml  (+3 more)
tests/configs/merge/: additional1.yaml  additional2.yaml  additional3.yaml  default1.yaml  default2.yaml  default3.yaml
tests/integration/: integration_show.py  test_ex_docs.py  test_inte_multiple_tags.py  test_sweep.py
tests/processing/: test_builtin.py  test_create.py
tests/unit/: test_base_config.py  test_build_config.py  test_cli_parser.py  test_config_routines.py  test_dict_routines.py  test_ex_docs.py  test_logger.py  test_process_routines.py  test_tag_routines.py
tests/unit/processing/: test_ast_parser.py  test_base.py  test_base_processing.py  test_builtin.py  test_create.py  test_maths_parser.py  test_type_parser.py
(+3 files in other folders)
