[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "cliconfig"
authors = [{ name = "Valentin Goldite", email = "valentin.goldite@gmail.com" }]
description = """Merge your config files and set parameters from the command line in a simple way."""
requires-python = ">=3.7"
keywords = ["cli", "config", "cliconfig", "python", "yaml", "merge"]
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["readme", "dependencies", "version"]

[tool.setuptools]
packages = ["cliconfig"]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[tool.setuptools_scm]
write_to = "cliconfig/_version.py"

[project.urls]
Source = "https://github.com/valentingol/cliconfig"

[tool.setuptools.dynamic]
readme = { file = ["docs/README_pypi.rst"], content-type = "text/x-rst" }
dependencies = { file = ["requirements.txt"] }

[tool.coverage.run]
source = ["cliconfig"]

[tool.coverage.report]
exclude_lines = ["if __name__ == '__main__':", "    main()"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_level = "DEBUG"

[tool.ruff]
# pycodestyle error (E) and warning (W), pyflakes (F), mccabe (C90), isort (I),
# pydocstyle (D), numpy-related (NPY), pandas-related (PD),
# flake8:
# annotations (ANN), boolean-trap (FBT), builtins (A), commas (COM),
# comprehensions (C4), import conventions (ICN), pie (PIE), pytest-style (PT),
# return (RET), simplify (SIM), tidy-imports (TID), unused-arguments (ARG)
select = [
    'A',
    'ARG',
    'C4',
    'C90',
    'COM',
    'D',
    'E',
    'F',
    'FBT',
    'I',
    'ICN',
    'NPY',
    'PD',
    'PIE',
    'PT',
    'RET',
    'SIM',
    'TID',
    'W',
]
ignore = ['RET504', 'COM812', 'F841', 'F401']
fixable = [
    'A',
    'ARG',
    'BLE',
    'C4',
    'C90',
    'COM',
    'D',
    'E',
    'F',
    'FBT',
    'I',
    'ICN',
    'NPY',
    'PD',
    'PIE',
    'PT',
    'RET',
    'SIM',
    'TID',
    'W',
]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
]

line-length = 88
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = 'E203'

[tool.pycodestyle]
ignore = 'E203'

[tool.black]
line-length = 88

[tool.ruff.pydocstyle]
convention = 'numpy'

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = '*.py'
follow_imports = 'skip'
follow_imports_for_stubs = false
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = false
